# shairport

./: .gitignore  README.md  configure.ac
src/: Makefile.am  shairport.c
src/lib/: Makefile.am  audio.c  audio_ao.c
